// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored correctly 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  stroke="#000000"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  vbHeight={33}
  vbWidth={33}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
        "stroke",
      ]
    }
    stroke={
      {
        "payload": 4278190080,
        "type": 0,
      }
    }
  >
    <RNSVGCircle
      cx="16.5"
      cy="16.5"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
        ]
      }
      r="16"
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    />
    <RNSVGPath
      d="M15.4276 24V13.0909H17.5511V24H15.4276ZM16.5 11.4077C16.1307 11.4077 15.8134 11.2846 15.5483 11.0384C15.2879 10.7874 15.1577 10.4891 15.1577 10.1435C15.1577 9.79309 15.2879 9.49479 15.5483 9.24858C15.8134 8.99763 16.1307 8.87216 16.5 8.87216C16.8693 8.87216 17.1842 8.99763 17.4446 9.24858C17.7098 9.49479 17.8423 9.79309 17.8423 10.1435C17.8423 10.4891 17.7098 10.7874 17.4446 11.0384C17.1842 11.2846 16.8693 11.4077 16.5 11.4077Z"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth="0.001"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`renders default correctly 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  stroke="#000000"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  vbHeight={33}
  vbWidth={33}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
        "stroke",
      ]
    }
    stroke={
      {
        "payload": 4278190080,
        "type": 0,
      }
    }
  >
    <RNSVGCircle
      cx="16.5"
      cy="16.5"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
        ]
      }
      r="16"
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    />
    <RNSVGPath
      d="M15.4276 24V13.0909H17.5511V24H15.4276ZM16.5 11.4077C16.1307 11.4077 15.8134 11.2846 15.5483 11.0384C15.2879 10.7874 15.1577 10.4891 15.1577 10.1435C15.1577 9.79309 15.2879 9.49479 15.5483 9.24858C15.8134 8.99763 16.1307 8.87216 16.5 8.87216C16.8693 8.87216 17.1842 8.99763 17.4446 9.24858C17.7098 9.49479 17.8423 9.79309 17.8423 10.1435C17.8423 10.4891 17.7098 10.7874 17.4446 11.0384C17.1842 11.2846 16.8693 11.4077 16.5 11.4077Z"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth="0.001"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`renders in dark mode correctly 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  stroke="#ffffff"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  vbHeight={33}
  vbWidth={33}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
        "stroke",
      ]
    }
    stroke={
      {
        "payload": 4294967295,
        "type": 0,
      }
    }
  >
    <RNSVGCircle
      cx="16.5"
      cy="16.5"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
        ]
      }
      r="16"
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
    />
    <RNSVGPath
      d="M15.4276 24V13.0909H17.5511V24H15.4276ZM16.5 11.4077C16.1307 11.4077 15.8134 11.2846 15.5483 11.0384C15.2879 10.7874 15.1577 10.4891 15.1577 10.1435C15.1577 9.79309 15.2879 9.49479 15.5483 9.24858C15.8134 8.99763 16.1307 8.87216 16.5 8.87216C16.8693 8.87216 17.1842 8.99763 17.4446 9.24858C17.7098 9.49479 17.8423 9.79309 17.8423 10.1435C17.8423 10.4891 17.7098 10.7874 17.4446 11.0384C17.1842 11.2846 16.8693 11.4077 16.5 11.4077Z"
      fill={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth="0.001"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`renders uncolored correctly 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  stroke="#000000"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  vbHeight={33}
  vbWidth={33}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
        "stroke",
      ]
    }
    stroke={
      {
        "payload": 4278190080,
        "type": 0,
      }
    }
  >
    <RNSVGCircle
      cx="16.5"
      cy="16.5"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
        ]
      }
      r="16"
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    />
    <RNSVGPath
      d="M15.4276 24V13.0909H17.5511V24H15.4276ZM16.5 11.4077C16.1307 11.4077 15.8134 11.2846 15.5483 11.0384C15.2879 10.7874 15.1577 10.4891 15.1577 10.1435C15.1577 9.79309 15.2879 9.49479 15.5483 9.24858C15.8134 8.99763 16.1307 8.87216 16.5 8.87216C16.8693 8.87216 17.1842 8.99763 17.4446 9.24858C17.7098 9.49479 17.8423 9.79309 17.8423 10.1435C17.8423 10.4891 17.7098 10.7874 17.4446 11.0384C17.1842 11.2846 16.8693 11.4077 16.5 11.4077Z"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth="0.001"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
